--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="  Entrar  ">
-                    <a href="#">Esqueci a senha <i><span  class="material-symbols-outlined">
-                        mail
-                    </span></i></a>
+                    <a href="#" class="botao">
+                        Esqueci a senha <i>
+                            <span  class="material-symbols-outlined">
+                                mail
+                            </span>
+                        </i>
+                    </a>
                 </form>
             </div>
         </section>
